Added encryption, Swagger API, refactoring and fix